data/derived/fa15/progs/unify/prog1198.ml.out
Characters 15-28:
  let _ = helper int_of_string [9;9;9;9;];;
                 ^^^^^^^^^^^^^
Error: This expression has type string -> int
       but an expression was expected of type string -> string
       Type int is not compatible with type string 
